bxSumsCards.css
html.mobi-task-v2-format .tasks-full-card-header {
    padding-bottom: 12px;
}

.customBxSums {
    position: relative;
    display: flex;
    clear: both;
    width: calc(100% - 22px);
    list-style: none;
    float: left;
    color: #333;
    margin: 1px 0 5px 12px;
    flex-direction: column;
    padding: 0;
    font-size: 13px;
    background: #fff;
    box-sizing: border-box;
    /* border-left: 3px solid #00cad4; */
    z-index: 9;
    border-radius: 2px 2px 2px 0;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.customBxSums > li {
    cursor: pointer;
    padding-left: 7px;
    display: flex;
    font-size: 12px;
}

.customBxSums > li.totals {
    line-height: 20px;
    /* border-top: 1px solid #D7D9DE; */
    font-family: "OpenSans-Semibold", "Helvetica Neue", Arial, Helvetica, sans-serif;
    padding: 5px 0 0 7px;
}
.customBxSums > li.totals svg {
    width: 20px;
    height: 20px
}

.customBxSums > li > div {
    float: left;
    position: relative;
    z-index: 2;
}

.customBxSums > li > div:first-child {
    margin: 0 7px 0 0;
}

.customBxSums > li.uSum {
    line-height: 20px;
    margin: 5px 0;
    transition: padding 0.1s ease-in;
}

.customBxSums > li.uSum.filtered {
    padding-left: 22px;
    font-weight: bold;
}

.customBxSums > li.uSum.filtered:after {
    content: "»";
    position: absolute;
    left: 10px;
    font-weight: bold;
    font-size: 17px;
    z-index: 1;
}

ul.customBxSums .triangle {
    position: absolute;
    left: -8px;
    filter: contrast(0.3);
    width: 0;
    bottom: 30px;
    border-top: 10px solid transparent;
    border-left: 0px solid transparent;
}

ul.customBxSums .band {
    position: absolute;
    left: -8px;
    bottom: 0;
    height: 30px;
    width: 8px;
}

ul.customBxSums .triangleR {
    position: absolute;
    right: -8px;
    filter: contrast(0.3);
    width: 0;
    bottom: 30px;
    border-top: 10px solid transparent;
    border-right: 0px solid transparent;
}

ul.customBxSums .bandR {
    position: absolute;
    right: -8px;
    bottom: 0;
    height: 30px;
    width: 8px;
}


.kanban-spacer.main-kanban-column-empty {
    max-width: 50px;
    overflow: hidden;
    min-width: 50px;
}

.kanban-spacer.main-kanban-column-empty:after {
    content: "";
    position: absolute;
    top: 0;
    bottom: 0;
    border-right: 1px dashed rgba(255,255,255,.55);
    margin-left: 24px;
}

.kanban-spacer.main-kanban-column-empty > * {
    display: none;
}

.kanban-spacer.main-kanban-column-empty > .main-kanban-column-header {
    display: block;
    min-width: 50px;
    max-width: 50px;
    cursor: pointer;
}

.main-kanban-column.hide {
    display: none;
}

.kanban-spacer.main-kanban-column-empty > .main-kanban-column-header > * {
    visibility: hidden;
}

.kanban-spacer.main-kanban-column-empty > .main-kanban-column-header > .main-kanban-column-subtitle {
    display: none;
}

.kanban-spacer.main-kanban-column-empty > .main-kanban-column-header:hover > * {
    visibility: visible;
}

.kanban-spacer.main-kanban-column-empty.main-kanban-column-edit-mode > .main-kanban-column-header > * {
    visibility: visible;
}
.kanban-spacer.main-kanban-column-empty.main-kanban-column-edit-mode:after {
    display: none;
}

.kanban-spacer.main-kanban-column-empty.main-kanban-column-edit-mode > * {
    display: block !important;
}

.kanban-spacer.main-kanban-column-empty.main-kanban-column-edit-mode,
.kanban-spacer.main-kanban-column-empty.main-kanban-column-edit-mode > .main-kanban-column-header {
    max-width: 300px !important;
    min-width: 300px !important;
}

.main-kanban-drag-mode-item .kanban-spacer > *,
.main-kanban-drag-mode-item .kanban-spacer.main-kanban-column-empty.main-kanban-column-edit-mode,
.main-kanban-drag-mode-item .kanban-spacer.main-kanban-column-empty.main-kanban-column-edit-mode > .main-kanban-column-header,
.main-kanban-drag-mode-item .kanban-spacer.main-kanban-column-target-shown > * {
    display: none !important;
    min-width: 0 !important;
    max-width: 0 !important;
    height: 0 !important;
    max-height: 0 !important;
}

.main-kanban-drag-mode-item .kanban-spacer.main-kanban-column-target-shown {
    max-height: 0 !important;
    overflow: hidden;
}

.mobi-feature.active > .menu-popup-item-icon {
    background: transparent url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='19' height='16'%3E%3Cpath fill='%23525C69' fill-rule='evenodd' d='M7.477 14.702L2 9.39l2.267-2.209 3.21 3.102L16.002 2l2.267 2.209z'/%3E%3C/svg%3E") no-repeat;
}


.main-kanban.denseMode .main-kanban-column-header {
    margin: 0 -4px 0 0;
}

.main-kanban.denseMode .main-kanban-column-subtitle {
    min-height: 25px;
}

.main-kanban.denseMode.main-kanban-column-subtitle-box {
    padding-top: 0;
    min-height: 25px;
}

.main-kanban.denseMode .main-kanban-column-add-item-button {
    width: 100%;
    height: 25px;
}
.main-kanban.noPicMode .tasks-kanban-item-image {
    display: none;
}

.main-kanban.denseMode .tasks-kanban-item-deadline, 
.main-kanban.denseMode .tasks-kanban-item-info,
.main-kanban.denseMode .tasks-kanban-task-counter,
.main-kanban.denseMode .tasks-kanban-item-control {
    display: none;
}

.main-kanban.denseMode .tasks-kanban-item-title {
    line-height: 15px;
}

.main-kanban.denseMode .tasks-kanban-item {
    padding: 10px 12px 0 12px
}

.main-kanban.denseMode .main-kanban-item-wrapper:hover {
    background-color: #eee;
}

.main-kanban.denseMode .tasks-kanban-item-hover .tasks-kanban-item-timelogs {
    opacity: 1;
}

.main-kanban.denseMode .tasks-kanban-item-users {
    padding: 0 0 10px 0;
}

.main-kanban.denseMode .tasks-kanban-item-gray {
    color: #17c467;
}

.menu-popup-item-text {
    user-select: none;
}

.bsTags {
    margin-top: -15px;
    margin-right: -50px;
}

#pagetitle .bsTags {
    margin-top: -10px;
    height: 25px;
}

#bizproc_task_list_table .bsTags {
    margin-top: -2px;
}

.bx-bizproc-table-body .bsTags {
    margin-top: 0;
}

.tasks-iframe-header .task-popup-pagetitle-item > .bsTags {
    margin-top: 0;
    margin-right: 10px;
}

.tasks-iframe-header .task-popup-pagetitle-item > .bsTags > span{
    padding: 0 4px;
    line-height: 19px;
    font-size: 12px;
}

/* Tags für Kanban und Scrum Ansicht */
.tasks-kanban-item-title .bsTags,
.tasks-scrum__item--title .bsTags {
    display: inline-block;
    margin: -1px -3px 2px 0;
    vertical-align: middle;
}

.bsTags > span {
    background-color: #444;
    display: inline-block;
    text-align: center;
    width: auto;
    min-width: 22px;
    margin-right: 3px;
    padding: 1px 4px 2px 4px;
    border-radius: 3px;
    color: #ffffff;
    box-shadow: 0px 1px 2px rgba(0,0,0,0.2);
    font-size: 10px;
    font-weight: 600;
    text-transform: uppercase;
    line-height: 1.3;
    vertical-align: middle;
}

.bsTags > span:before, .bsTags > span:after  {
    display: none !important;
}

.bsTags > span.bug {
    background-color: #cf0303;
}

.bsTags > span.cr {
    background-color: #7ab418;
}

.bsTags > span.anforderung {
    background-color: #7ab418;
}

.bsTags > span.verbesserung {
    background-color: #12b98f;
}

.bsTags > span.optimierung {
    background-color: #128aca;
}

.bsTags > span.info {
    background-color: #d700ca;
}

.bsTags > span.cloud {
    background-color: #187eb4;
}

.bsTags > span.kopie {
    background-color: #777;
}

.bsTags > span.bo {
    background-color: #e67e22;
}

.bsTags > span.arc {
    background-color: #3498db;
}

.bsTags > span.rb {
    background-color: #9b59b6;
}

.bsTags > span.mockup {
    background-color: #e91e63;
}

.bsTags > span.erledigt {
    background-color: #27ae60;
}

